--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -12,6 +12,11 @@
 
 .card-img-top {
     &:hover {
-        filter: contrast(140%);
+        filter: contrast(120%);
+        filter: brightness(120%);
     }
+}
+
+.card-body {
+    min-height: 90px;
 }
