--- a/scss/components/_weather.scss
+++ b/scss/components/_weather.scss
@@ -6,7 +6,7 @@
     align-items: center;
     .weatherCard {
         background-color: $secondary-light;
-    width: 170px;
+        width: 170px;
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
@@ -23,6 +23,10 @@
             width: 50px;
             height: auto;
             align-self: center;
+        }
+        &:hover {
+            box-shadow: 0 0 25px 0.5px $secondary;
+            cursor: pointer;
         }
     }
 }
@@ -45,5 +49,42 @@
         color: $primary-dark;
         text-align: center;
         margin: 20px;
+    }
+}
+
+.weatherTips {
+    width: 80%;
+    max-width: 1200px;
+    margin: 40px auto;
+    .weatherTip {
+        width: 100%;
+        border: 1px solid $secondary-dark;
+        border-radius: 5px;
+        h4 {
+            color: $secondary;
+            text-align: center;
+            margin: 15px;
+        }
+        .tip {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            .weatherTxt {
+                margin: 20px 20px;
+                width: 60%;
+            }
+            .weatherImg {
+                width: 30%;
+                min-width: 320px;
+                height: auto;
+                margin: 20px 20px;
+                img{
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
     }
 }
