--- a/scss/components/_weather.scss
+++ b/scss/components/_weather.scss
@@ -60,6 +60,7 @@
         width: 100%;
         border: 1px solid $secondary-dark;
         border-radius: 5px;
+        margin: 20px;
         h4 {
             color: $secondary;
             text-align: center;
