--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,10 @@ header .navbar .container-fluid div form {
   text-align: right;
 }
 
+.dis:disabled {
+  background-color: #666;
+}
+
 .productPageContainer {
   width: 80%;
   display: flex;
