--- a/css/style.css
+++ b/css/style.css
@@ -379,4 +379,18 @@ h1 {
   margin: 50px auto;
 }
 
+@media only screen and (max-width: 1050px) {
+  .filterContainer {
+    display: flex;
+    justify-content: center;
+    width: fit-content;
+    margin: 0 auto;
+    position: unset;
+  }
+
+  .productsContainer {
+    margin: 50px auto;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
