--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@
 @import 'components/cart';
 @import 'components/productPage';
 @import 'components/weather';
+//@import 'base/mediaQueries';
+
 * { 
     transition: all 0.5s;
 }
@@ -94,4 +96,18 @@ h1 {
 
 .noFilter {
     margin: 50px auto;
+}
+
+
+@media only screen and (max-width: 1050px) {
+    .filterContainer {
+        display: flex;
+        justify-content: center;
+        width: fit-content;
+        margin: 0 auto;
+        position: unset;
+    }
+    .productsContainer {
+        margin: 50px auto;
+    }
 }
