--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,30 @@ header .navbar .container-fluid div form {
   background-color: #666;
 }
 
+@media only screen and (max-width: 820px) {
+  .cartImg, .input-group-text {
+    display: none;
+  }
+
+  .cartCard {
+    min-height: 150px;
+  }
+  .cartCard .input-group {
+    width: 60px;
+  }
+  .cartCard .cartProductName {
+    width: 100px;
+    font-size: 16px;
+  }
+  .cartCard .cartProductPrice {
+    font-size: 16px;
+    width: 75px;
+  }
+
+  .cartSummary h5 {
+    font-size: 14px;
+  }
+}
 .productPageContainer {
   width: 80%;
   display: flex;
