--- a/scss/components/_cart.scss
+++ b/scss/components/_cart.scss
@@ -85,3 +85,28 @@
         background-color: #666;
     }
 }
+
+@media only screen and (max-width: 820px) {
+    .cartImg , .input-group-text {
+        display: none;
+    }
+    .cartCard {
+        min-height: 150px;
+        .input-group {
+            width: 60px;
+        }
+        .cartProductName {
+            width: 100px;
+            font-size: 16px;
+        }
+        .cartProductPrice {
+            font-size: 16px;
+            width: 75px;
+        }
+    }
+    .cartSummary {
+        h5{
+            font-size: 14px;
+        }
+    }
+}
