--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Estilos Generales del site */
 .image-container {
   height: 100px;
   width: auto;
@@ -315,8 +314,45 @@ header .navbar .container-fluid div form {
   height: auto;
 }
 
+footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  background-color: #4fb3bf;
+}
+footer .leftUl {
+  list-style: none;
+  padding: 5px;
+  margin: 10px 0;
+  border-right: 1px solid #005662;
+}
+footer .leftUl li {
+  text-align: right;
+}
+footer .rightUl {
+  list-style: none;
+  padding: 5px;
+  margin: 10px 0;
+}
+
+@media only screen and (max-wdith: 650px) {
+  footer .leftUl li {
+    font-size: 14px;
+  }
+  footer .rightUl li {
+    font-size: 14px;
+  }
+}
+/* Estilos Generales del site */
 * {
   transition: all 0.5s;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -329,6 +365,7 @@ h1 {
 .filterContainer {
   display: inline-block;
   position: fixed;
+  top: 250px;
   text-align: center;
   margin: 20px;
   border: 1px solid #4fb3bf;
