--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,17 +1,22 @@
-/* Estilos Generales del site */
+
 @import 'base/variables';
 @import 'components/cards';
 @import 'components/header';
 @import 'components/cart';
 @import 'components/productPage';
 @import 'components/weather';
-//@import 'base/mediaQueries';
+@import 'components/footer';
 
+/* Estilos Generales del site */
 * { 
     transition: all 0.5s;
 }
 
-
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 h1 {
     margin-top: 90px;
     margin-bottom: 40px;
@@ -22,6 +27,7 @@ h1 {
 .filterContainer {
     display: inline-block;
     position: fixed;
+    top: 250px;
     text-align: center;
     margin: 20px;
     border: 1px solid $primary-light;
