--- a/scss/components/_weather.scss
+++ b/scss/components/_weather.scss
@@ -51,6 +51,10 @@
         margin: 20px;
     }
 }
+.tipsAnchor {
+    position: relative;
+    top: -50px;
+}
 
 .weatherTips {
     width: 80%;
@@ -89,3 +93,4 @@
         }
     }
 }
+
