--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,9 @@
 * { 
     transition: all 0.5s;
 }
-
+a {
+    text-decoration: none;
+}
 body{
     min-height: 100vh;
     display: flex;
@@ -27,7 +29,7 @@ h1 {
 .filterContainer {
     display: inline-block;
     position: fixed;
-    top: 250px;
+    bottom: 10vh;
     text-align: center;
     margin: 20px;
     border: 1px solid $primary-light;
@@ -105,7 +107,7 @@ h1 {
 }
 
 
-@media only screen and (max-width: 1050px) {
+@media screen and (max-width: 1050px), screen and(max-height: 700px) {
     .filterContainer {
         display: flex;
         justify-content: center;
